--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,21 @@
 ---
   - name: Set Subscription ID to S01
     set_fact:
-      azure_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_GEN_ACCPROD') }}
-    when: at_var_azure_subscription_id == 'S01'
+      custom_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_GEN_ACCPROD') }}
+    when: at_var_custom_subscription_id == 'S01'
   
   - name: Set Subscription ID to S02
     set_fact:
-      azure_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_GEN_INFRA') }}
-    when: at_var_azure_subscription_id == 'S02'
+      custom_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_GEN_INFRA') }}
+    when: at_var_custom_subscription_id == 'S02'
   
   - name: Set Subscription ID to S03
     set_fact:
-      azure_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_GEN_DEVTEST') }}
-    when: at_var_azure_subscription_id == 'S03'
+      custom_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_GEN_DEVTEST') }}
+    when: at_var_custom_subscription_id == 'S03'
 
   - name: Set Subscription ID to PLAYGROUND
     set_fact:
-      azure_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_PLAYGROUND') }}
-    when: at_var_azure_subscription_id == 'PLAYGROUND'
+      custom_subscription_id={{ lookup('env','AZ_SUBSCRIPTION_ID_PLAYGROUND') }}
+    when: at_var_custom_subscription_id == 'PLAYGROUND'
 ...
